# capstone_project

./: 0407.txt  0508.cpp  0512.cpp  1019.cpp  1p visualizer0620.cpp  2p0620.cpp  2p0630.cpp  2p0718.cpp  2p0727.cpp  2p0728.cpp  CMakeLists.txt  DTW.h  Make_text_motion.py  Project2.vcxproj  Project2.vcxproj.filters  README.md  TESTING.cpp  confidence_level_log.py  data.csv  distance.cpp  dtw1005.h  fbx_pc.ply  fileRead.cpp  freetype-2.8.1.tar.bz2.sig  harfbuzz-1.7.2.tar.bz2.sha256  local_transform.cpp  main1005.cpp  motion_0.csv  motion_1.csv  motion_10.csv  motion_11.csv  motion_12.csv  motion_13.csv  motion_14.csv  motion_15.csv  motion_16.csv  motion_17.csv  motion_2.csv  motion_3.csv  motion_4.csv  (+26 more)
excel/: excel0707.cpp  main0706.cpp
open3d/: TestVisualizer.cpp
x64/Debug/: Project2.exe.recipe  Project2.ilk  Project2.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.write.1u.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Project2.exe.recipe  Project2.iobj  Project2.ipdb  Project2.vcxproj.FileListAbsolute.txt
x64/Release/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
